variables.RunFour.scala.error
Compilation error:
RunFour:2: error: not found: value compteBiscuit
while (compteBiscuit<4) {
       ^