variables.RunFour.scala.code
var comptebiscuit:Int = 0
while (compteBiscuit<4) {
  avance()
	if (estSurBiscuit) {
    comptebiscuit=comptebiscuit+1
  }
}